@@ -1,12 +1,13 @@
 package io.quarkus.opentelemetry.deployment;
 
-import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
 
-import io.quarkus.bootstrap.model.AppArtifact;
+import io.quarkus.builder.Version;
+import io.quarkus.maven.dependency.Dependency;
 import io.quarkus.runtime.configuration.ConfigurationException;
 import io.quarkus.test.QuarkusProdModeTest;
 
@@ -14,9 +15,7 @@ public class TracerWithInvalidExtensionTest {
     @RegisterExtension
     static final QuarkusProdModeTest config = new QuarkusProdModeTest()
             .withEmptyApplication()
-            .setForcedDependencies(
-                    Collections.singletonList(
-                            new AppArtifact("io.quarkus", "quarkus-smallrye-opentracing", "999-SNAPSHOT")))
+            .setForcedDependencies(List.of(Dependency.of("io.quarkus", "quarkus-smallrye-opentracing", Version.getVersion())))
             .setExpectedException(ConfigurationException.class);
 
     @Test
