@@ -5,7 +5,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -14,8 +13,8 @@ import org.junit.jupiter.api.extension.RegisterExtension;
 import io.dekorate.servicebinding.model.ServiceBinding;
 import io.fabric8.kubernetes.api.model.HasMetadata;
 import io.fabric8.openshift.api.model.DeploymentConfig;
-import io.quarkus.bootstrap.model.AppArtifact;
 import io.quarkus.builder.Version;
+import io.quarkus.maven.dependency.Dependency;
 import io.quarkus.test.ProdBuildResults;
 import io.quarkus.test.ProdModeTestResults;
 import io.quarkus.test.QuarkusProdModeTest;
@@ -29,9 +28,9 @@ public class OpenshiftWithServiceBindingTest {
             .setApplicationVersion("0.1-SNAPSHOT")
             .withConfigurationResource("openshift-with-service-binding.properties")
             .setLogFileName("k8s.log")
-            .setForcedDependencies(
-                    Arrays.asList(new AppArtifact("io.quarkus", "quarkus-openshift", Version.getVersion()),
-                            new AppArtifact("io.quarkus", "quarkus-kubernetes-service-binding", Version.getVersion())));
+            .setForcedDependencies(List.of(
+                    Dependency.of("io.quarkus", "quarkus-openshift", Version.getVersion()),
+                    Dependency.of("io.quarkus", "quarkus-kubernetes-service-binding", Version.getVersion())));
 
     @ProdBuildResults
     private ProdModeTestResults prodModeTestResults;
